# gexai-pipeline

./: .gitignore  pyproject.toml  readme.md  readme1.md
src/gexai/: audio.py  cli.py  config.py  diarization.py  download.py  pipeline.py  transcription.py
